tests/invalid/undef_inst.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module undef_inst.

:- pred x(int).
:- mode x(foo >> bar) is det.

x(1).
