tests/invalid/undef_inst.err_exp
undef_inst.m:005: Warning: interface for module `undef_inst' does not export
undef_inst.m:005:   anything.
undef_inst.m:007: Error: module `undef_inst' should start with either an
undef_inst.m:007:   `:- interface' or an `:- implementation' declaration.
undef_inst.m:007:   The following assumes that the missing declaration is an
undef_inst.m:007:   `:- implementation' declaration.
undef_inst.m:008: In mode declaration for predicate `x'/1:
undef_inst.m:008:   error: undefined inst `bar'/0.
undef_inst.m:008: In mode declaration for predicate `x'/1:
undef_inst.m:008:   error: undefined inst `foo'/0.
For more information, recompile with `-E'.
